--- a/MalachiGriffith.css
+++ b/MalachiGriffith.css
@@ -45,7 +45,7 @@ TABLE.Content
 {
     BORDER-LEFT: #000000 1px solid;
     BORDER-RIGHT: #000000 1px solid;
-	  BACKGROUND-COLOR: #ffffff
+	  BACKGROUND-COLOR: #d6ecf9
 }
 TD.Color1
 {
@@ -56,7 +56,7 @@ TD.Color1
 }
 TD.Color2
 {
-    BACKGROUND-COLOR: #ffffff
+    BACKGROUND-COLOR: #d6ecf9
 }
 TD.Head
 {
